tektoncd/tektoncd-install/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tektoncd
spec:
  gateways: # {"$kpt-set":"kubeflow-gateway"}
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /tektoncd/
    rewrite:
      uri: /tektoncd/
    route:
    - destination:
        host: tekton-pipelines-controller.$(namespace).svc.$(clusterDomain)
        port:
          number: 80
